--- a/examen-practica/docker-compose.yml
+++ b/examen-practica/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3.8'
 services:
   db:
     image: mysql:8.0
@@ -7,6 +8,6 @@ services:
       MYSQL_USER: alumno
       MYSQL_PASSWORD: alumno123
     ports:
-      - "3306:3306"
+      - "3328:3306"
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
